# mesh_viewer

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  globals.h  main.cpp  mesh.cpp  mesh.h  shaders.cpp
